tests/compile_fail/safe_simd_wrong_token.stderr
warning: unused import: `AvxToken`
 --> tests/compile_fail/safe_simd_wrong_token.rs:4:40
  |
4 | use archmage::tokens::x86::{Sse2Token, AvxToken};
  |                                        ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
  --> tests/compile_fail/safe_simd_wrong_token.rs:11:53
   |
11 |         let _ = archmage::mem::avx::_mm256_loadu_ps(sse2, &data);
   |                 ----------------------------------- ^^^^ expected `AvxToken`, found `Sse2Token`
   |                 |
   |                 arguments to this function are incorrect
   |
note: function defined here
  --> src/generated/x86/avx.rs
   |
   | pub fn _mm256_loadu_ps(_token: AvxToken, mem_addr: &[f32; 8]) -> __m256 {
   |        ^^^^^^^^^^^^^^^
